<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bylaw Report</string>
    <string name="user_info_message">Please provide us with the following contact information.</string>
    <string name="report_info_message">Please provide us with the following incident information.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="button_continue">Continue</string>
    <string name="send_report">Send Report</string>
    <string name="report_continue">Begin Report</string>
    <string name="main_title">Bylaw Report</string>
    <string name="incident_date">Date of Incident</string>
    <string name="report_description">Incident Description</string>
    <string name="vehicle_description">Vehicle Description</string>
    <string name="vehicle_violation">Vehicle</string>
    <string name="property_violation">Property</string>
    <string name="other_violation">Other</string>
    <string name="attach_picture">Attach Image</string>
    <string name="request_permission">Please enable camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="violation_header">Please select the type of violation you will be reporting.</string>
</resources>
