<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_info_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/violationType_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="#ffffff"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/user_info_message"
        android:textColor="@color/cityBlue"
        android:textSize="40dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/cityBlue"
        android:orientation="horizontal">

        <EditText
            android:padding="5dp"
            android:id="@+id/first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/first_name"
            android:textSize="35dp" />

        <EditText
            android:padding="5dp"
            android:id="@+id/last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/last_name"
            android:textSize="35dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/cityBlue">

        <EditText
            android:padding="5dp"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:focusable="true"
            android:inputType="textEmailAddress"
            android:focusableInTouchMode="true"
            android:hint="@string/email"
            android:textSize="35dp" />

        <EditText
            android:padding="5dp"
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:textSize="35dp" />

        <EditText
            android:padding="5dp"
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textSize="35dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            style="@style/continueButton"
            android:textSize="40dp"
            android:layout_width="match_parent"
            android:onClick="sendUserInformation"
            android:text="@string/button_continue" />

    </RelativeLayout>
</LinearLayout>
